--- a/pridani_receptu.html
+++ b/pridani_receptu.html
@@ -25,7 +25,7 @@
             <h1>VYMAZLENÁ KUCHAŘKA</h1>
             <nav>
                 <ul>
-                    <li><a href="home.html">Domů</a></li>
+                    <li><a href="index.html">Domů</a></li>
                     <li><a href="recepty.html">Recepty</a></li>
                     <li><a href="pridani_receptu.html">Přidání receptů</a></li>
                 </ul>
