--- a/pridani_receptu.html
+++ b/pridani_receptu.html
@@ -8,6 +8,7 @@
         <link rel="icon" type="image/x-icon" href="images/favicon.ico">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
         <script src="js/main.js" defer></script>
         <script src="js/pridani_receptu.js" defer></script>
 
@@ -62,8 +63,11 @@
             </section>
 
         </main>
-        <footer>
+       <footer>
             <p>&copy; 2025 teri_pindakova_design</p>
+            <button id="wake-btn" title="Nezhasínat obrazovku">
+    <i class="fa-solid fa-lightbulb"></i>
+</button>
         </footer>
     </body>
 
